--- a/themes/sergiocarracedo/assets/scss/pages/home/_search.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/home/_search.scss
@@ -1,19 +1,16 @@
 .home-search {
-  background: var(--secondary-color);
+  @include background-diagonal(var(--secondary-color), var(--primary-color-10));
+
   padding: 35px 0;
   margin-bottom: 35px;
+
   &__content {
     display: flex;
     flex-wrap: wrap;
     gap: 15px;
     justify-content: center;
     align-items: center;
-
-    .search-form__input {
-      width: 400px;
-      font-size: 20px;
-      height: 40px;
-      max-width: 100%;
-    }
+    padding: 0 20px;
+    max-width: 100%;
   }
 }
