--- a/themes/sergiocarracedo/assets/scss/settings/_variables.scss
+++ b/themes/sergiocarracedo/assets/scss/settings/_variables.scss
@@ -1,11 +1,11 @@
 $white: white;
-$black: black;
-$primary-color: #1F715F;
-$secondary-color: #97C57B;
-$flat-color: #97C57B;
-$light-green: rgba(#1F715F, 0.2);
+$black: #121211;
+$primary-color: #213b4a;
+$secondary-color: #90c6be;
+$flat-color: #90c6be;
+$light-green: rgba(#213b4a, 0.2);
 
 
-$impact-font: 'Rozha One';
-$primary-font: Merriweather;
-$hand-font: 'Allura';
+$impact-font: 'iA Writer Mono';
+$primary-font: 'iA Writer Mono';
+$hand-font: 'DM Serif Text';
