--- a/themes/sergiocarracedo/layouts/partials/footer.html
+++ b/themes/sergiocarracedo/layouts/partials/footer.html
@@ -1,4 +1,4 @@
-<footer class="web-footer">
+<footer class="web-footer  background-paper-secondary">
   <div class="wrapper-1200">
     <div class="web-footer__left">
       {{ partial "me.html" }}
