--- a/themes/sergiocarracedo/layouts/partials/header.html
+++ b/themes/sergiocarracedo/layouts/partials/header.html
@@ -1,4 +1,4 @@
-<header class="web-header">
+<header class="web-header background-paper-secondary">
   <h2>
     <a class="back-to-home" href="/" title="Back to home">
 
