--- a/themes/sergiocarracedo/layouts/partials/post-nav.html
+++ b/themes/sergiocarracedo/layouts/partials/post-nav.html
@@ -1,7 +1,7 @@
 <div class="post-nav post-nav--prev">
   {{ if .NextPage }}
   <a class="post-nav__link" href="{{ .NextPage.Permalink }}?ref=footer">
-    <div class="post-nav__cover">
+    <div class="post-nav__cover btn btn--img btn--hover-parent">
       {{ $cover := .NextPage.Resources.GetMatch .NextPage.Params.cover }}
       {{ if $cover }}
       {{ $cover := ($cover.Fill "200x120 Center")}}
@@ -16,7 +16,7 @@
 </div>
 
 <div class="blog-link">
-  <a class="btn" href="{{ "blog" | absURL }}">
+  <a class="btn btn--outlined" href="{{ "blog" | absURL }}">
     All Blog posts
   </a>
 </div>
@@ -24,7 +24,7 @@
 <div class="post-nav post-nav--next">
   {{ if .PrevPage }}
   <a class="post-nav__link" href="{{ .PrevPage.Permalink }}?ref=footer">
-    <div class="post-nav__cover">
+    <div class="post-nav__cover btn btn--img btn--hover-parent">
       {{ $cover := .PrevPage.Resources.GetMatch .PrevPage.Params.cover }}
       {{ if $cover }}
       {{ $cover := ($cover.Fill "200x120 Center")}}
