--- a/themes/sergiocarracedo/assets/scss/elements/_btn.scss
+++ b/themes/sergiocarracedo/assets/scss/elements/_btn.scss
@@ -1,14 +1,73 @@
 .btn {
-  padding: 4px 20px;
+  --btn-bg-color: var(--secondary-color);
+  --btn-shadow-color: var(--primary-color);
+  --btn-text-color: var(--primary-color);
+  --btn-border-radius: 10px;
+
+
+  border-radius: var(--btn-border-radius);
+  border: 0;
+  padding: 7px 12px;
+  color: var(--btn-text-color);
+  background-color: var(--btn-bg-color);
+  letter-spacing: 1.5px;
+  font-family: $primary-font;
+  font-size: 15px;
+  transition: all 0.3s ease;
+  box-shadow: var(--btn-shadow-color) 0 7px 0 0;
+  cursor: pointer;
   text-decoration: none;
-  background: var(--green-gradient);
-  color: $white;
-  font-size: 1rem;
-  transition: all .2s ease-in-out;
-  @include parallelogram();
-  display: inline-block;
+
 
   &:hover {
-    transform: skewX(-20deg) scale(1.1);
+    box-shadow: var(--btn-shadow-color) 0 4px 0 0;
+  }
+
+  &:active {
+    background-color: rgb(255, 56, 86);
+    box-shadow: var(--btn-shadow-color) 0 0 0 0;
+    transform: translateY(5px);
+    transition: all .2s ease-in-out;
+  }
+
+  &--outlined {
+    border: 1px solid var(--btn-shadow-color);
+  }
+
+
+  &--img {
+    padding: 0;
+    display: inline-block;
+    overflow: hidden;
+
+    img {
+      transition: all .2s ease-in-out;
+      width: 100%;
+      border-radius: var(--btn-border-radius);
+    }
+
+    &:hover {
+      img {
+        transform: scale(1.05) rotate(2deg);
+      }
+    }
   }
 }
+
+:has(> .btn--hover-parent) {
+  &:hover {
+    .btn {
+      box-shadow: var(--btn-shadow-color) 0 4px 0 0;
+
+      &--img {
+        img {
+          transform: scale(1.05) rotate(2deg);
+        }
+      }
+    }
+  }
+}
+
+
+
+
