--- a/themes/sergiocarracedo/assets/scss/layout/_header.scss
+++ b/themes/sergiocarracedo/assets/scss/layout/_header.scss
@@ -1,9 +1,14 @@
 .web-header {
-  background: url(/i/header_bg.png);
-  background-size: cover;
-
   padding: 10px 20px;
   z-index: 2;
+
+  & {
+    --title-color: #{$primary-color};
+  }
+
+  [data-theme="dark"] & {
+    --title-color: $white;
+  }
 
   @media screen  {
     position: fixed;
@@ -15,7 +20,7 @@
   .avatar {
     border-radius: 99px;
     width: 30px;
-    border: 3px solid $white;
+    border: 3px solid var(--primary-color);
   }
 
   display: flex;
@@ -25,7 +30,7 @@
     display: flex;
     gap: 15px;
     align-items: center;
-    color: $white;
+    color: var(--primary-color);
     text-decoration: none;
 
     &__content {
@@ -51,7 +56,7 @@
       opacity: 1;
       align-items: center;
       font-family: $hand-font;
-      font-size: 2rem;
+      font-size: 1.4rem;
     }
 
     @media screen and (max-width: 500px) {
@@ -77,7 +82,7 @@
 
   &__page-title {
     flex: 1;
-    color: $white;
+    color:  var(--title-color);
     align-items: center;
     padding-right: 200px;
     padding-left: 30px;
