--- a/themes/sergiocarracedo/assets/scss/pages/home/_skills.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/home/_skills.scss
@@ -1,17 +1,20 @@
-.skills {
-
-}
 
 .skill {
   display: inline-block;
   padding: 4px 10px;
   font-size: 16px;
-  background: #333;
+  background: $black;
   color: $white;
   margin: 5px;
   @include parallelogram();
 
   animation: .6s 1 skill-in backwards;
+
+  &--secondary {
+    @media screen and (max-width: 768px) {
+      display: none;
+    }
+  }
 }
 
 @keyframes skill-in {
