--- a/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
@@ -1,15 +1,21 @@
-
 .post__content {
+  background: var(--bg);
   font-size: 16px;
-  margin-bottom: 60px;
+  padding: 0 20px;
+  margin-bottom: 20px;
+  border-radius: 5px;
+  *::selection {
+    background: var(--primary-color);
+    color: var(--bg);
+  }
 
   @media screen and (min-width: 768px) {
-    padding: 0 30px;
+    padding: 30px;
     font-size: 20px;
   }
 
   iframe {
-    @include box-shadow(12px)
+    @include block(0);
   }
 
   a {
@@ -39,7 +45,7 @@
   }
 
   $sizes: (
-          h1: 1.95em,
+          h1: 1.8em,
           h2: 1.6em,
           h3: 1.4em,
           h4: 1.25em,
@@ -134,7 +140,6 @@
     }
   }
 
-
   code, pre {
     font-family: "Source Code Pro", monospace
   }
@@ -149,10 +154,11 @@
   pre {
     scrollbar-color: $white transparent;
     scrollbar-width: thin;
+    box-shadow: var(--secondary-color) -7px 0 0 0;
 
     > code {
-      background: rgba(99, 99, 99, 0.07);
-      color: var(--secondary-color);
+      background: $black;
+      color: $white;
     }
 
     &::-webkit-scrollbar {
@@ -179,7 +185,7 @@
     }
 
     margin: 1.6rem 0;
-    @include box-shadow();
+    @include block();
 
     code {
       background: none;
@@ -190,13 +196,11 @@
 
   blockquote {
     margin: 0 0 1.1em;
-    border-left: 3px solid $flat-color;
-    border-left-width: 6px;
-    background-color: lighten($flat-color, 20%); //rgba(119, 119, 119, 0.05);
-    border-top-right-radius: 5px;
-    border-bottom-right-radius: 5px;
+    box-shadow: var(--primary-color) -7px 0 0 0;
+    background-color: var(--secondary-color);
+    border-radius: 5px;
     padding: 15px 20px;
-    color: #333;
+    color: var(--primary-color);
 
     a {
       color: $primary-color;
