--- a/themes/sergiocarracedo/assets/scss/pages/post/_metadata.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_metadata.scss
@@ -1,16 +1,12 @@
 .post {
   &__metadata {
-    display: flex;
+    display: inline-flex;
     flex-flow: wrap;
+    gap: 10px;
   }
 
-  &__tags {
-    display: flex;
-    flex-wrap: wrap;
-  }
 
   &__tag {
-    margin: 5px 5px;
     background: linear-gradient(to right, #{$primary-color} 0%, #{$primary-color} 100%);
     color: $white;
     padding: 3px 20px 5px 20px;
@@ -27,6 +23,9 @@
 
     &:hover {
       background: var(--green-gradient)
+    }
+    &:last-of-type {
+        margin-right: 10px;
     }
   }
 
