--- a/themes/sergiocarracedo/assets/scss/pages/post/_nav.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_nav.scss
@@ -1,5 +1,6 @@
 .post__nav-wrapper {
-  background: var(--light-primary-color);
+  @include background-diagonal(var(--secondary-color), var(--primary-color-10));
+
   padding: 40px 0;
 
   .wrapper-1200 {
@@ -28,13 +29,10 @@
   padding: 0 15px;
 
   &__cover {
-    background: url(/i/header_bg.png);
+    background: var(--primary-color);
     width: 200px;
     max-width: 100%;
     height: 120px;
-    @include box-shadow(12px);
-    transition: all .3s ease-in-out;
-    transition-delay: .1s;
     margin-bottom: 20px;
 
     img {
@@ -48,8 +46,9 @@
     text-decoration: none;
 
     .post-nav__title {
+      max-width: 200px;
       transition: text-decoration-color .4s;
-      text-decoration: underline 0.15em var(--text-color);
+      text-decoration: underline 1px var(--secondary-color);
 
       &:before, &:after {
         transition: all .3s ease-in-out;
@@ -57,10 +56,6 @@
     }
 
     &:hover {
-      .post-nav__cover {
-        @include box-shadow(12px, 0.3, 10px);
-      }
-
       .post-nav__title {
         text-decoration: underline 0.15em transparent;
       }
@@ -88,6 +83,7 @@
     align-items: flex-end;
 
     .post-nav__title {
+      text-align: right;
       &:after {
         display: inline-block;
         content: '»';
