--- a/themes/sergiocarracedo/assets/scss/pages/post/_search.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_search.scss
@@ -1,6 +1,5 @@
 .post__search-wrapper {
-  background: $secondary-color;
-  box-shadow: inset 0 0 20px rgba(0, 0, 0, 0.1);
+  @include background-diagonal(var(--primary-color), var(--secondary-color-10));
   color: #222;
   padding: 50px 0;
 
@@ -11,4 +10,8 @@
     align-items: center;
     flex-wrap: wrap;
   }
+  input {
+    font-family: var(--font-family);
+  }
+
 }
