--- a/themes/sergiocarracedo/assets/scss/settings/_fontface.scss
+++ b/themes/sergiocarracedo/assets/scss/settings/_fontface.scss
@@ -1,3 +1,22 @@
 @import url('https://fonts.googleapis.com/css2?family=Rozha+One:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Merriweather:wght@400;500;600;700&display=swap');
 @import url('https://fonts.googleapis.com/css2?family=Allura:wght@400;500;600;700&display=swap');
+
+/* ia-writer-mono-latin-400-normal */
+@font-face {
+  font-family: 'iA Writer Mono';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/ia-writer-mono@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/ia-writer-mono@latest/latin-400-normal.woff) format('woff');
+}
+
+/* dm-serif-text-latin-400-normal */
+@font-face {
+  font-family: 'DM Serif Text';
+  font-style: normal;
+  font-display: swap;
+  font-weight: 400;
+  src: url(https://cdn.jsdelivr.net/fontsource/fonts/dm-serif-text@latest/latin-400-normal.woff2) format('woff2'), url(https://cdn.jsdelivr.net/fontsource/fonts/dm-serif-text@latest/latin-400-normal.woff) format('woff');
+  unicode-range: U+0000-00FF,U+0131,U+0152-0153,U+02BB-02BC,U+02C6,U+02DA,U+02DC,U+0304,U+0308,U+0329,U+2000-206F,U+2074,U+20AC,U+2122,U+2191,U+2193,U+2212,U+2215,U+FEFF,U+FFFD;
+}
