--- a/themes/sergiocarracedo/layouts/partials/search-form.html
+++ b/themes/sergiocarracedo/layouts/partials/search-form.html
@@ -1,6 +1,5 @@
-<form class="search-form" action='{{ "search" | absURL }}' method="get">
+<form class="search-form search-form--dark search-form--l" action='{{ "search" | absURL }}' method="get">
   <label hidden for="search-input">Search</label>
-
   <input type="text" id="search-input" name="query" placeholder="Search" class="search-form__input">
   <button class="search-form__button">
     <i class="fas fa-search"></i>
