--- a/themes/sergiocarracedo/assets/scss/pages/post/_search.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_search.scss
@@ -1,6 +1,6 @@
 .post__search-wrapper {
   @include background-diagonal(var(--primary-color), var(--secondary-color-10));
-  color: #222;
+  color: var(--contrast-text-color);
   padding: 50px 0;
 
   > * {
