--- a/themes/sergiocarracedo/assets/scss/pages/home/_posts.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/home/_posts.scss
@@ -32,6 +32,10 @@
 
     .btn {
       font-size: 1.5rem;
+
+      @media screen and (max-width: 768px) {
+        font-size: 1rem;
+      }
     }
   }
 
