--- a/themes/sergiocarracedo/assets/scss/pages/post/_teaser.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_teaser.scss
@@ -36,6 +36,11 @@
       &__title {
         margin-bottom: 30px;
         font-size: 2rem;
+        word-wrap: anywhere;
+
+        @media screen and (max-width: 768px) {
+          font-size: 1.5rem;
+        }
 
         .post__link {
           transition: all .3s ease-in-out;
@@ -53,6 +58,10 @@
       &__summary {
         color: var(--text-color);
         text-decoration: none;
+
+        @media screen and (max-width: 768px) {
+          font-size: 1rem;
+        }
       }
     }
   }
