--- a/themes/sergiocarracedo/layouts/partials/post-nav.html
+++ b/themes/sergiocarracedo/layouts/partials/post-nav.html
@@ -1,15 +1,15 @@
 <div class="post-nav post-nav--prev">
-  {{ if .NextPage }}
-  <a class="post-nav__link" href="{{ .NextPage.Permalink }}?ref=footer">
+  {{ if .Next }}
+  <a class="post-nav__link" href="{{ .Next.Permalink }}?ref=footer">
     <div class="post-nav__cover btn btn--img btn--hover-parent">
-      {{ $cover := .NextPage.Resources.GetMatch .NextPage.Params.cover }}
+      {{ $cover := .Next.Resources.GetMatch .Next.Params.cover }}
       {{ if $cover }}
       {{ $cover := ($cover.Fill "200x120 Center")}}
-      <img alt=".NextPage.Title" src="{{ $cover.RelPermalink }}">
+      <img alt=".Next.Title" src="{{ $cover.RelPermalink }}">
       {{ end }}
     </div>
     <div class="post-nav__title">
-      {{ .NextPage.Title | truncate 50 "..."}}
+      {{ .Next.Title | truncate 50 "..."}}
     </div>
   </a>
   {{ end }}
@@ -22,17 +22,17 @@
 </div>
 
 <div class="post-nav post-nav--next">
-  {{ if .PrevPage }}
-  <a class="post-nav__link" href="{{ .PrevPage.Permalink }}?ref=footer">
+  {{ if .Prev }}
+  <a class="post-nav__link" href="{{ .Prev.Permalink }}?ref=footer">
     <div class="post-nav__cover btn btn--img btn--hover-parent">
-      {{ $cover := .PrevPage.Resources.GetMatch .PrevPage.Params.cover }}
+      {{ $cover := .Prev.Resources.GetMatch .Prev.Params.cover }}
       {{ if $cover }}
       {{ $cover := ($cover.Fill "200x120 Center")}}
-      <img alt=".PrevPage.Title" class="post-nav__cover" src="{{ $cover.RelPermalink }}">
+      <img alt=".Prev.Title" class="post-nav__cover" src="{{ $cover.RelPermalink }}">
       {{ end }}
     </div>
     <div class="post-nav__title">
-      {{ .PrevPage.Title | truncate 50 "..." }}
+      {{ .Prev.Title | truncate 50 "..." }}
     </div>
   </a>
   {{ end }}
