feat: posts by year

--- a/themes/sergiocarracedo/assets/scss/pages/post/_nav.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_nav.scss
@@ -16,6 +16,15 @@
   }
 }
 
+.post__nav-years {
+  padding-top: 20px;
+  text-align: center;
+
+  .years {
+    justify-content: center;
+  }
+}
+
 .blog-link {
   align-items: center;
   justify-content: center;
