--- a/themes/sergiocarracedo/assets/scss/elements/_link.scss
+++ b/themes/sergiocarracedo/assets/scss/elements/_link.scss
@@ -1,6 +1,9 @@
 .link {
+  transition: all .3s ease-in-out;
+  display: block;
+
   color: var(--primary-color);
-  text-decoration: underline 0.1em var(--secondary-color);
+  text-decoration: underline 0.1em var(--primary-color-50);
 
   &:hover {
     text-decoration-color: transparent;
