--- a/themes/sergiocarracedo/assets/scss/pages/section-list/_list.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/section-list/_list.scss
@@ -10,6 +10,13 @@
   }
 
   &__title {
+    small {
+      font-size: 0.6em;
+    }
+  }
 
+  .break {
+    flex-basis: 100%;
+    height: 0;
   }
 }
