--- a/themes/sergiocarracedo/layouts/index.html
+++ b/themes/sergiocarracedo/layouts/index.html
@@ -4,10 +4,11 @@
 {{ end }}
 
 {{ define "main" }}
+{{ $pages := (where .Site.Pages "Section" "in" "blog") }}
 <div class="home">
   <aside class="home-search">
     <div class="wrapper-1200 home-search__content">
-      Search in the blog {{ partial "search-form.html" }}
+      {{ partial "search-block.html" .}}
     </div>
   </aside>
   <div class="wrapper-1200">
@@ -19,7 +20,7 @@
           </a>
         </h3>
       </header>
-      {{ $pages := (where .Site.Pages "Section" "in" "blog") }}
+
       {{.Content}}
 
       {{ range first 5 .Paginator.Pages}}
@@ -29,7 +30,7 @@
 
       <footer class="home-posts__all">
         <a href="{{ "blog" | absURL }}#post-5" class="btn">
-          <span>View all blog posts</span>
+          <span>View all blog posts [{{len ($pages)}}]</span>
         </a>
       </footer>
     </section>
