--- a/themes/sergiocarracedo/layouts/partials/head.html
+++ b/themes/sergiocarracedo/layouts/partials/head.html
@@ -17,26 +17,26 @@
   <meta content="{{ $.Site.Params.author }}" name="author">
   {{ end }}
   {{ if $.Site.Params.favicon }}
-  <link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
-  <link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
-  <link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
-  <link rel="manifest" href="/site.webmanifest">
-  <link rel="mask-icon" href="/safari-pinned-tab.svg" color="#5bbad5">
-  <meta name="msapplication-TileColor" content="#da532c">
-  <meta name="theme-color" content="#ffffff">
+  <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
+  <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
+  <link href="/favicon-16x16.png" rel="icon" sizes="16x16" type="image/png">
+  <link href="/site.webmanifest" rel="manifest">
+  <link color="#5bbad5" href="/safari-pinned-tab.svg" rel="mask-icon">
+  <meta content="#da532c" name="msapplication-TileColor">
+  <meta content="#ffffff" name="theme-color">
 
   {{ end }}
   {{ partial "opengraph.html" . }}
 
   {{ if .Params.canonicalUrl }}
-  <link rel="canonical" href="{{ .Params.canonicalUrl }}">
+  <link href="{{ .Params.canonicalUrl }}" rel="canonical">
   {{ else }}
-  <link rel="canonical" href="{{ .Permalink }}">
+  <link href="{{ .Permalink }}" rel="canonical">
   {{ end }}
 
 
   {{ $scss := resources.Get "scss/main.scss" }}
-  {{ $style := $scss | resources.ToCSS | resources.Fingerprint }}
+  {{ $style := $scss | toCSS | resources.Fingerprint }}
   <link href="{{ $style.Permalink }}" integrity="{{ $style.Data.Integrity }}" rel="stylesheet">
 
   <link href="//cdnjs.cloudflare.com/ajax/libs/cookieconsent2/3.1.0/cookieconsent.min.css" rel="stylesheet"
