--- a/themes/sergiocarracedo/layouts/blog/single.html
+++ b/themes/sergiocarracedo/layouts/blog/single.html
@@ -43,7 +43,7 @@
 
   <aside class="post__comments">
     <div class="wrapper-1200">
-      <div id="disqus_thread">To show the comments is mandatory accept cookie policy.</div>
+      <div id="disqus_thread">To show comments is mandatory to accept cookie policy.</div>
     </div>
   </aside>
 </article>
