--- a/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
@@ -1,8 +1,8 @@
 .post__content {
   background: var(--bg);
   font-size: 16px;
-  padding: 0 20px;
-  margin-bottom: 20px;
+  padding: 10px;
+  margin: 0 -10px 20px -10px;
   border-radius: 5px;
   *::selection {
     background: var(--primary-color);
@@ -12,6 +12,7 @@
   @media screen and (min-width: 768px) {
     padding: 30px;
     font-size: 20px;
+    margin: 0 0 20px 0;
   }
 
   iframe {
