--- a/themes/sergiocarracedo/layouts/partials/me.html
+++ b/themes/sergiocarracedo/layouts/partials/me.html
@@ -2,7 +2,7 @@
 {{ $avatar := $avatar.Fit "170x170" }}
 <div class="me">
   <div class="me__avatar">
-    <img alt="Sergio Carracedo" src="{{ $avatar.RelPermalink }}"/>
+    <img alt="Sergio Carracedo" height="180" src="{{ $avatar.RelPermalink }}" width="180"/>
   </div>
   <div class="me__titles">
     <h1>Sergio Carracedo</h1>
