--- a/themes/sergiocarracedo/layouts/partials/menu.html
+++ b/themes/sergiocarracedo/layouts/partials/menu.html
@@ -1,11 +1,11 @@
-<nav role="main" class="menu">
-  <ul>
-    <li class="menu__item">
-      <a href="{{ "" | absURL }}">Home</a>
+<nav class="menu">
+  <ul role="menu">
+    <li class="menu__item" role="presentation">
+      <a role="menuitem" href="{{ "" | absURL }}">Home</a>
     </li>
 
-    <li class="menu__item">
-      <a href="{{ "blog" | absURL }}">Blog</a>
+    <li class="menu__item" role="presentation">
+      <a role="menuitem" href="{{ "blog" | absURL }}">Blog</a>
     </li>
   </ul>
 </nav>
