--- a/themes/sergiocarracedo/layouts/partials/script.html
+++ b/themes/sergiocarracedo/layouts/partials/script.html
@@ -81,13 +81,13 @@ function runCookiesAllowed () {
 </script>
 
 {{ $themeJs := resources.Get "js/theme.js" }}
-{{ $js := $themeJs |resources.Fingerprint }}
+{{ $js := $themeJs | resources.Minify  |resources.Fingerprint }}
 <script integrity="{{ $js.Data.Integrity }}" src="{{ $js.Permalink }}"></script>
 
-<script type="text/javascript" src="https://cdn.jsdelivr.net/npm/lunr@2.3.9/lunr.min.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/lunr@2.3.9/lunr.min.js" type="text/javascript"></script>
 
 {{ $searchJs := resources.Get "js/search.js" }}
-{{ $js := $searchJs |resources.Fingerprint }}
+{{ $js := $searchJs | resources.Minify  |resources.Fingerprint }}
 <script integrity="{{ $js.Data.Integrity }}" src="{{ $js.Permalink }}"></script>
 
 
