--- a/themes/sergiocarracedo/layouts/partials/search-form.html
+++ b/themes/sergiocarracedo/layouts/partials/search-form.html
@@ -1,7 +1,7 @@
-<form class="search-form search-form--dark search-form--l" action='{{ "search" | absURL }}' method="get">
-  <label hidden for="search-input">Search</label>
-  <input type="text" id="search-input" name="query" placeholder="Search" class="search-form__input">
-  <button class="search-form__button">
+<form action='{{ "search" | absURL }}' class="search-form search-form--dark search-form--l" method="get">
+  <label for="search-input" hidden>Search</label>
+  <input class="search-form__input" id="search-input" name="query" placeholder="Search" type="text">
+  <button aria-label="Search in the blog" class="search-form__button">
     <i class="fas fa-search"></i>
   </button>
 </form>
