--- a/themes/sergiocarracedo/assets/scss/components/_social.scss
+++ b/themes/sergiocarracedo/assets/scss/components/_social.scss
@@ -1,8 +1,11 @@
 .social {
+  display: flex;
+  gap: 10px;
+  flex-wrap: wrap;
+
   &__link {
     background: $white;
     color: #333;
-    display: inline-block;
     border-radius: 9999px;
     width: 40px;
     height: 40px;
@@ -11,9 +14,19 @@
     text-align: center;
     transition: all .2s ease-in-out;
     margin: 3px;
+    overflow: hidden;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    text-decoration: none;
 
     &:hover {
       transform: scale(1.2);
+    }
+
+    svg {
+      width: 20px;
+      height: 20px;
     }
   }
 }
