--- a/themes/sergiocarracedo/layouts/partials/social.html
+++ b/themes/sergiocarracedo/layouts/partials/social.html
@@ -1,7 +1,11 @@
 <div class="social">
   {{ range $index, $el := site.Data.social }}
     <a class="social__link" href="{{ $el.url }}" target="_blank" title="{{ $el.name }}" style="animation-delay: {{ sub 2 (div $index 15.0) }}s">
-      <i class="{{ $el.icon}}"></i>
+      {{ if $el.iconSVG }}
+        {{$el.iconSVG | safeHTML}}
+      {{ else }}
+        <i class="{{ $el.icon}}"></i>
+      {{ end }}
     </a>
   {{ end }}
 </div>
