chore: RSS feed

--- a/themes/sergiocarracedo/layouts/partials/head.html
+++ b/themes/sergiocarracedo/layouts/partials/head.html
@@ -16,6 +16,14 @@
   {{ if $.Site.Params.author }}
   <meta content="{{ $.Site.Params.author }}" name="author">
   {{ end }}
+
+  {{ if $.Site.Params.rssFeed }}
+  <link href="{{ $.Site.BaseURL }}/index.xml"
+        rel="alternate"
+        title="{{ .Site.Title }}"
+        type="application/rss+xml">
+  {{ end }}
+
   {{ if $.Site.Params.favicon }}
   <link href="/apple-touch-icon.png" rel="apple-touch-icon" sizes="180x180">
   <link href="/favicon-32x32.png" rel="icon" sizes="32x32" type="image/png">
@@ -27,9 +35,8 @@
   <link crossorigin href="https://fonts.googleapis.com/css2?family=Rozha+One:wght@400;500;600;700&display=swap" rel="preconnect">
   <link crossorigin href="https://fonts.googleapis.com/css2?family=Merriweather:wght@400;500;600;700&display=swap" rel="preconnect">
   <link crossorigin href="https://fonts.googleapis.com/css2?family=Allura:wght@400;500;600;700&display=swap" rel="preconnect">
-
-
   {{ end }}
+
   {{ partial "opengraph.html" . }}
 
   {{ if .Params.canonicalUrl }}
