--- a/themes/sergiocarracedo/layouts/partials/menu.html
+++ b/themes/sergiocarracedo/layouts/partials/menu.html
@@ -7,5 +7,9 @@
     <li class="menu__item" role="presentation">
       <a role="menuitem" href="{{ "blog" | absURL }}">Blog</a>
     </li>
+
+    <li class="menu__item" role="presentation">
+      <a role="menuitem" href="{{ "index.xml" | absURL }}">RSS Feed</a>
+    </li>
   </ul>
 </nav>
