--- a/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
+++ b/themes/sergiocarracedo/assets/scss/pages/post/_content.scss
@@ -60,6 +60,7 @@
       font-size: $size;
       margin-bottom: #{$size*0.8};
       margin-top: #{$size*1.6};
+      font-weight: bold;
     }
   }
 
