--- a/themes/sergiocarracedo/layouts/_default/_markup/render-image.html
+++ b/themes/sergiocarracedo/layouts/_default/_markup/render-image.html
@@ -4,43 +4,43 @@
 {{- $default := printf "<img src=\"%s\"alt=\"%s\" title=\"%s\" />" (.Destination | safeURL) $.PlainText $.Title -}}
 
 {{- if $image -}}
-{{- if or (strings.HasSuffix $image.Name ".gif") (strings.HasSuffix $image.Name ".svg") -}}
+  {{- if or (strings.HasSuffix $image.Name ".gif") (strings.HasSuffix $image.Name ".svg") -}}
 {{- $default | safeHTML -}}
-{{- else -}}
-{{- $imageOriginalWidth := $image.Width -}}
-{{- $sizes := slice 458 768 1200 -}}
-{{- $srcset := slice -}}
-{{- $sizestag := slice -}}
-{{- range $sizes -}}
-{{- if lt (mul . 1.2) $imageOriginalWidth -}}
-{{- $thumb := $image.Resize (printf "%dx webp q90" .) -}}
-{{- $srcset = $srcset | append (printf ("%s %dw") $thumb.RelPermalink . ) -}}
-{{- $sizestag = $sizestag | append (printf ("(max-width: %dpx) 100vw") . ) -}}
-{{- end -}}
-{{- end -}}
+  {{- else -}}
+    {{- $imageOriginalWidth := $image.Width -}}
+    {{- $sizes := slice 458 768 1200 -}}
+    {{- $srcset := slice -}}
+    {{- $sizestag := slice -}}
+    {{- range $sizes -}}
+      {{- if lt (mul . 1.2) $imageOriginalWidth -}}
+        {{- $thumb := $image.Resize (printf "%dx webp q90" .) -}}
+        {{- $srcset = $srcset | append (printf ("%s %dw") $thumb.RelPermalink . ) -}}
+        {{- $sizestag = $sizestag | append (printf ("(max-width: %dpx) 100vw") . ) -}}
+      {{- end -}}
+    {{- end -}}
 
-{{- if ne (len $srcset) 3 -}}
-{{- $thumb := $image.Resize (printf "%dx webp q90" $imageOriginalWidth) -}}
-{{- $srcset = $srcset | append (printf ("%s %dw") $thumb.RelPermalink $imageOriginalWidth ) -}}
-{{- $sizestag = $sizestag | append (printf ("%dpx") $imageOriginalWidth ) -}}
-{{- end -}}
-{{- $imageFallback := $image.Resize "100x jpg q90" -}}
-<figure class="image-caption">
-  <img
-      src="{{ $imageFallback.RelPermalink }}"
-      alt="{{ $.PlainText }}"
-      title="{{ $.Title }}"
-      width="{{ $image.Width }}"
-      height="{{ $image.Height }}"
-      {{- if gt (len $srcset) 0 -}}
-      {{- (printf " srcset=\"%s\"" (delimit $srcset ", ")) | safeHTMLAttr -}}
-  {{- (printf " sizes=\"%s\"" (delimit $sizestag ", ")) | safeHTMLAttr -}}
+    {{- if ne (len $srcset) 3 -}}
+      {{- $thumb := $image.Resize (printf "%dx webp q90" $imageOriginalWidth) -}}
+      {{- $srcset = $srcset | append (printf ("%s %dw") $thumb.RelPermalink $imageOriginalWidth ) -}}
+      {{- $sizestag = $sizestag | append (printf ("%dpx") $imageOriginalWidth ) -}}
+    {{- end -}}
+    {{- $imageFallback := $image.Resize "1100x jpg q80" -}}
+    <figure class="image-caption">
+      <img
+        src="{{ $imageFallback.RelPermalink }}"
+        alt="{{ $.PlainText }}"
+        title="{{ $.Title }}"
+        width="{{ $imageFallback.Width }}"
+        height="{{ $imageFallback.Height }}"
+        {{- if gt (len $srcset) 0 -}}
+          {{- (printf " srcset=\"%s\"" (delimit $srcset ", ")) | safeHTMLAttr -}}
+          {{- (printf " sizes=\"%s\"" (delimit $sizestag ", ")) | safeHTMLAttr -}}
+        {{- end -}}
+      />
+      <figcaption>{{ with $.Title | safeHTML }}{{ . }}{{ end }}</figcaption>
+    </figure>
   {{- end -}}
-  />
-  <figcaption>{{ with $.Title | safeHTML }}{{ . }}{{ end }}</figcaption>
-</figure>
-{{- end -}}
 {{- else -}}
-{{- warnf "Unable to find '%s' -- ensure image exists alongside document in page bundle" .Destination -}}
-{{- $default | safeHTML -}}
+  {{- warnf "Unable to find '%s' -- ensure image exists alongside document in page bundle" .Destination -}}
+  {{- $default | safeHTML -}}
 {{- end -}}
