--- a/themes/sergiocarracedo/layouts/partials/header.html
+++ b/themes/sergiocarracedo/layouts/partials/header.html
@@ -11,7 +11,7 @@
         <div class="back-to-home__title">
           {{ $avatar := resources.Get "i/sergiocarracedo.jpg" }}
           {{ $avatar := $avatar.Fit "100x100" }}
-          <img alt="Sergio Carracedo" class="avatar" src="{{ $avatar.RelPermalink }}"/>
+          <img alt="Sergio Carracedo" class="avatar" src="{{ $avatar.RelPermalink }}" width="100" height="100"/>
           <h4>
             Sergio Carracedo
           </h4>
