chore: Optimize main image

--- a/themes/sergiocarracedo/layouts/blog/single.html
+++ b/themes/sergiocarracedo/layouts/blog/single.html
@@ -12,9 +12,11 @@
     {{ $cover := .Resources.GetMatch .Params.cover }}
     {{ if $cover }}
     {{ $cover := ($cover.Fill "1200x400 Center")}}
-    <figure class="post__cover">
-      <img alt="{{ .Title }}" height="{{ $cover.Height }}" src="{{ $cover.RelPermalink }}" width="{{ $cover.Width }}"/>
-    </figure>
+    <div class="post__cover">
+      {{ partial "image.html" (dict "Image" $cover "Alt" .Title "Title" .Title "Width" $cover.Width) }}
+
+      <!--<img alt="{{ .Title }}" height="{{ $cover.Height }}" src="{{ $cover.RelPermalink }}" width="{{ $cover.Width }}"/>-->
+    </div>
     {{ end }}
 
     <div class="post__content">
